@@ -26,6 +26,7 @@
     <changelog>
         <![CDATA[
         <p>Changes in 5.0<br/>
+        [BEAM-1287] Default RGB profile of MERIS L1b is Landsat but should be Tristimulus<br/>
         [BEAM-1561] Slider labels of colour manipulation tool are all zero for small value ranges <br/>
         [BEAM-1457] Display a spectral band's wavelengths next to its name<br/>
         <p>Changes in 4.10.1<br/>
